# AI-Cockpit

./: .env.example  .gitignore  Makefile  README.md  XAI_Lab2_Assignment.ipynb  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_crm_extension.py  0003_gdpr_linkedin_recording_templates.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  calls.py  candidates.py  chat.py  dashboard.py  emails.py  events.py  jobs.py  matches.py  messages.py  reports.py  settings.py  templates.py  webhooks.py
backend/app/models/: __init__.py  call_log.py  candidate.py  chat_message.py  email_log.py  email_template.py  job.py  match.py  user.py
backend/app/schemas/: __init__.py  call.py  candidate.py  job.py  match.py
backend/app/services/: auth.py  claude_client.py  crm.py  cv_parser.py  email_service.py  email_templates.py  event_broker.py  external_api.py  followup_mail.py  gdpr.py  language_detector.py  linkedin_proxycurl.py  linkedin_service.py  matching_engine.py  notification.py  photo_extractor.py  runtime_config.py  vector_index.py  voice_agent.py
backend/app/utils/: prompts.py
backend/app/workers/: email_poller.py  gdpr_purge.py  linkedin_poller.py  match_processor.py
backend/tests/: conftest.py  test_crm.py  test_followup_mail.py  test_photo_extractor.py  test_runtime_config.py  test_webhook_auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
(+29 files in other folders)
