[project]
name = "recruiterai-backend"
version = "0.1.0"
description = "RecruiterAI - AI Recruiting Telephone Agent Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "anthropic>=0.39.0",
    "twilio>=9.3.0",
    "deepgram-sdk>=3.7.0",
    "elevenlabs>=1.13.0",
    "python-multipart>=0.0.17",
    "loguru>=0.7.2",
    "aioimaplib>=1.1.0",
    "aiosmtplib>=3.0.2",
    "msal>=1.31.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "pillow>=11.0.0",
    "websockets>=13.1",
    "tenacity>=9.0.0",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
